actually fixed the cropping

--- a/src/styles/ImageUploadBox.css
+++ b/src/styles/ImageUploadBox.css
@@ -20,8 +20,8 @@
 }
 
 .image-container {
-    width: 100%;
-    height: 100%;
+    width: 600px;
+    height: 400px;
     justify-content: center;
     align-items: center;
     background-repeat: no-repeat;
